Added pages and modified curernt pages

--- a/animals.html
+++ b/animals.html
@@ -24,6 +24,21 @@
 				<a href="quizzes.html">Quizzes</a>
 				<a href="contact.html">Contact us</a>
 			</div>
+
+			<div id="animalLinks">
+				<a href="animals/aligator.html">Alligator</a>
+				<a href="animals/mongoose.html">Mongoose</a>
+				
+				<a href="animals/molerat.html">Naked Mole Rat</a>
+				<a href="animals/sloth.html">Sloth</a>
+				
+				<a href="animals/redPanda.html">Red Panda</a>
+				<a href="animals/octopus.html">Octopus</a>
+			</div>
+			
+			<div id="animalPageContent">
+				<p>Animals facts go here</p>
+			</div>
 		</div>
 	</body>
 </html>
