changed the about page slightly

--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
 				<a href="contact.html">Contact us</a>
 			</div>
 			<div id="aboutPage">
-			<p> Welcome to the Pixel Perfect Animals website. Join us on a journey to learn about and test your knowledge of popular animal species.
+				<p> 
+				Welcome to the Pixel Perfect Animals website. Join us on a journey to learn about and test your knowledge of popular animal species.
 				We try to give knowledge about many different animal species so that it will give those who are intreged about animals to learn simple cool facts about them.
 				</p>
 			</div>
