--- a/animals/aligator.html
+++ b/animals/aligator.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Change To fit Webpage</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="styles/base.css">
+		<link rel="stylesheet" href="../styles/base.css">
 	</head>
 	
 	<body>
