added all the facts to animal subpages

--- a/animals/Octopus.html
+++ b/animals/Octopus.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Octopus Fun Facts</h4>
+				<ul>
+					<li>Octopuses are smarter than they look. They can remember and recognize individual humans.</li>
+					<li>Octopuses have a similar birthing method to chickens- they lay eggs and give birth to fully developed young.</li>
+					<li>Octopuses are not only sea creatures; they can run on land.</li>
+				</ul>
 			</div>
 		</div>
 	</body>
