--- a/animals/aligator.html
+++ b/animals/aligator.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Fun Facts about Alligators</h4>
+				<ul>
+					<li>Alligators can go through 3,000 teeth in a lifetime. Imagine if they had to pay for dental insurance!</li>
+					<li>Alligator temperature is determined by water temperature.</li>
+					<li>Contrary to widespread belief, alligators are more scared of you than you might be of them!</li>
+				</ul>
 			</div>
 		</div>
 	</body>
