--- a/animals/moleRat.html
+++ b/animals/moleRat.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Naked Mole Rat Fun Facts</h4>
+				<ul>
+					<li>Naked mole rats have a special place in pop culture, especially in the hit TV series Kim Possible where one of the main characters had a pet named Rufus.</li>
+					<li>Naked mole rats have over 17 different vocal sounds which they use to communicate with each other.</li>
+					<li>Naked mole rats have no neurotransmitters which means they are resistant to pain. Talk about a cool superpower!</li>
+				</ul>
 			</div>
 		</div>
 	</body>
