--- a/animals/mongoose.html
+++ b/animals/mongoose.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Mongoose</h4>
+				<ul>
+					<li>Mongooses might have a striking resemblance to rodents, but they are classified as mammals.</li>
+					<li>Mongooses are stronger than they look! They are considered specialists at hunting snakes and have been known to kill cobra snakes.</li>
+					<li>Mongooses are semiaquatic and spend a portion of their time in the water.</li>
+				</ul>
 			</div>
 		</div>
 	</body>
