--- a/animals/redPanda.html
+++ b/animals/redPanda.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Red Panda fun facts</h4>
+				<ul>
+					<li>Red pandas have similar grooming habits to house cats and lick themselves clean.</li>
+					<li>Red pandas stay warm in colder environments by wrapping their tails around themselves.</li>
+					<li>Red pandas are herbivories and eat about 20,000 bamboo leaves every day.</li>
+				</ul>
 			</div>
 		</div>
 	</body>
