--- a/animals/sloth.html
+++ b/animals/sloth.html
@@ -37,7 +37,12 @@
 			</div>
 
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Sloth Fun Facts</h4>
+				<ul>
+					<li>Sloths are thought to be lazy, but that belief comes from their inability to move fast.</li>
+					<li>Sloths have poor eyesight and are color blind.</li>
+					<li>Sloths sleep for 15-20 hours a day which is just as much as a human baby!</li>
+				</ul>
 			</div>
 		</div>
 	</body>
