added pictures added source code

--- a/animals/aligator.html
+++ b/animals/aligator.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img src="../images/alligator.jpg" alt="American Alligator" width="350" height="350">
+
 				<h4>Fun Facts about Alligators</h4>
 				<ul>
 					<li>Alligators can go through 3,000 teeth in a lifetime. Imagine if they had to pay for dental insurance!</li>
