added more content

--- a/animals.html
+++ b/animals.html
@@ -37,7 +37,24 @@
 			</div>
 			
 			<div id="animalPageContent">
-				<p>Animals facts go here</p>
+				<h4>Animal kingdom facts</h4>
+				<!-- insert image here of tree diagram thing -->
+
+				<p>Living organisms are placed in groups based on similarities. Biological classification begins with a general classification and becomes more specific as the classifications are broken down further.</p>
+
+				<p>The eight levels inlcude:</p>
+				<ul>
+					<li>Domain (Super-kingdom)</li>
+					<li>Kingdom</li>
+					<li>Phylum</li>
+					<li>Class</li>
+					<li>Order</li>
+					<li>Family</li>
+					<li>Genus</li>
+					<li>Species</li>
+				</ul>
+
+				<p>Each of the animals on our site was carefully picked by our animal experts. Check out the links provided to learn more information about each of the animals.</p>
 			</div>
 		</div>
 	</body>
