--- a/animals/Octopus.html
+++ b/animals/Octopus.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img src="../images/Octopus.jpg" alt="Octopus">
+
 				<h4>Octopus Fun Facts</h4>
 				<ul>
 					<li>Octopuses are smarter than they look. They can remember and recognize individual humans.</li>
