--- a/animals/moleRat.html
+++ b/animals/moleRat.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img src="../images/moleRat.jpg" alt="nakedMoleRat">
+
 				<h4>Naked Mole Rat Fun Facts</h4>
 				<ul>
 					<li>Naked mole rats have a special place in pop culture, especially in the hit TV series Kim Possible where one of the main characters had a pet named Rufus.</li>
