--- a/animals/mongoose.html
+++ b/animals/mongoose.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img src="../images/mongoose.jpg" alt="Mongoose">
+
 				<h4>Mongoose</h4>
 				<ul>
 					<li>Mongooses might have a striking resemblance to rodents, but they are classified as mammals.</li>
