--- a/animals/redPanda.html
+++ b/animals/redPanda.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img src="../images/redPanda.jpg" alt="Red Panda">
+
 				<h4>Red Panda fun facts</h4>
 				<ul>
 					<li>Red pandas have similar grooming habits to house cats and lick themselves clean.</li>
