--- a/animals/sloth.html
+++ b/animals/sloth.html
@@ -37,6 +37,8 @@
 			</div>
 
 			<div id="animalPageContent">
+				<img id="sloth" src="../images/sloth.jpg" alt="Sloth">
+
 				<h4>Sloth Fun Facts</h4>
 				<ul>
 					<li>Sloths are thought to be lazy, but that belief comes from their inability to move fast.</li>
