--- a/animals/aligator.html
+++ b/animals/aligator.html
@@ -37,7 +37,7 @@
 			</div>
 
 			<div id="animalPageContent">
-				<img src="../images/alligator.jpg" alt="American Alligator" width="350" height="350">
+				<img src="../images/alligator.jpg" alt="American Alligator">
 
 				<h4>Fun Facts about Alligators</h4>
 				<ul>
