--- a/quizzes.html
+++ b/quizzes.html
@@ -24,7 +24,7 @@
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
 				<a href="animals.html">Animals</a>
-				<a href="quizzes.html">Quizzes</a>
+				<a href="login.html">Quizzes</a>
 				<a href="contact.html">Contact us</a>
 			</div>
 		
