added js to check username and password

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 				<a href="contact.html">Contact us</a>
 			</div>
 
-			<div id="logo">
-				<img src="images/parrot.jpg">
-			</div>
+			
 
 			<div id="indexPageContent">
 				<h4>Welcome to the Zoo!</h4>
 				<p>WELCOME! We are glad you want to learn about animals and care about the environemnt.</p>
 				<p>Animals are a crucial part to the environment and we need to protect them, please after your visit here look into conservation projects.</p>
+				<img id="logo" src="images/parrot.jpg">
 			</div>
 		</div>
 	</body>
