--- a/login.html
+++ b/login.html
@@ -21,14 +21,14 @@
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
 				<a href="animals.html">Animals</a>
-				<a href="quizzes.html">Quizzes</a>
+				<a href="login.html">Quizzes</a>
 				<a href="contact.html">Contact us</a>
 			</div>
 
 			<div id="login">
 				<h5>To take the quiz please login</h5>
 
-				<form action="login.php" method="post">
+				<form id="loginForm" action="login.php" method="post">
 					<table>
 						<tr>
 							<td>User name:</td>
