changed titles and headings

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Change To fit Webpage</title>
+		<title>About</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="styles/base.css">
 	</head>
