--- a/animals/sloth.html
+++ b/animals/sloth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Change To fit Webpage</title>
+		<title>Sloth</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="../styles/base.css">
 	</head>
@@ -10,11 +10,11 @@
 		<div id="container">
 			
 			<div id="headerTitle">
-				<h1>Change to fit Webpages</h1>
+				<h1>Pixel Perfect Animals</h1>
 			</div>
 			
 			<div class="pageTitle">
-				<h2>Page Title</h2>
+				<h2>Sloth</h2>
 			</div>
 			
 			<div class="navbar">
