--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Change To fit Webpage</title>
+		<title>Registration Page</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="styles/base.css">
 		<script src="scripts/register.js" type="text/javascript"></script>
@@ -11,11 +11,11 @@
 		<div id="container">
 			
 			<div id="headerTitle">
-				<h1>Change to fit Webpages</h1>
+				<h1>Pixel Perfect Animals</h1>
 			</div>
 			
 			<div class="pageTitle">
-				<h2>Page Title</h2>
+				<h2>Registration Page</h2>
 			</div>
 			
 			<div class="navbar">
