--- a/animals.html
+++ b/animals.html
@@ -38,7 +38,7 @@
 			
 			<div id="animalPageContent">
 				<h4>Animal kingdom facts</h4>
-				<!-- insert image here of tree diagram thing -->
+				<img id="chart" src="images/animalKingdomChart.jpg">
 
 				<p>Living organisms are placed in groups based on similarities. Biological classification begins with a general classification and becomes more specific as the classifications are broken down further.</p>
 
