--- a/animals/Octopus.html
+++ b/animals/Octopus.html
@@ -7,6 +7,7 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,6 +46,7 @@
 					<li>Octopuses have a similar birthing method to chickens- they lay eggs and give birth to fully developed young.</li>
 					<li>Octopuses are not only sea creatures; they can run on land.</li>
 				</ul>
+				<button onclick="octopus()">Click me for A Surprise</button>
 			</div>
 		</div>
 	</body>
