--- a/animals/aligator.html
+++ b/animals/aligator.html
@@ -7,6 +7,8 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
+
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,7 +47,9 @@
 					<li>Alligator temperature is determined by water temperature.</li>
 					<li>Contrary to widespread belief, alligators are more scared of you than you might be of them!</li>
 				</ul>
+				<button onclick="alligator()">Click me for A Surprise</button>
 			</div>
+
 		</div>
 	</body>
 </html>
