--- a/animals/moleRat.html
+++ b/animals/moleRat.html
@@ -7,6 +7,7 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,6 +46,7 @@
 					<li>Naked mole rats have over 17 different vocal sounds which they use to communicate with each other.</li>
 					<li>Naked mole rats have no neurotransmitters which means they are resistant to pain. Talk about a cool superpower!</li>
 				</ul>
+				<button onclick="moleRat()">Click me for A Surprise</button>
 			</div>
 		</div>
 	</body>
