--- a/animals/sloth.html
+++ b/animals/sloth.html
@@ -7,6 +7,7 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,6 +46,7 @@
 					<li>Sloths have poor eyesight and are color blind.</li>
 					<li>Sloths sleep for 15-20 hours a day which is just as much as a human baby!</li>
 				</ul>
+				<button onclick="sloth()">Click me for A Surprise</button>
 			</div>
 		</div>
 	</body>
