--- a/animals/mongoose.html
+++ b/animals/mongoose.html
@@ -7,6 +7,7 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,6 +46,7 @@
 					<li>Mongooses are stronger than they look! They are considered specialists at hunting snakes and have been known to kill cobra snakes.</li>
 					<li>Mongooses are semiaquatic and spend a portion of their time in the water.</li>
 				</ul>
+				<button onclick="mongoose()">Click me for A Surprise</button>
 			</div>
 		</div>
 	</body>
