--- a/animals/redPanda.html
+++ b/animals/redPanda.html
@@ -7,6 +7,7 @@
 	</head>
 	
 	<body>
+		<script src="../scripts/surprises.js"></script>
 		<div id="container">
 			
 			<div id="headerTitle">
@@ -45,6 +46,7 @@
 					<li>Red pandas stay warm in colder environments by wrapping their tails around themselves.</li>
 					<li>Red pandas are herbivories and eat about 20,000 bamboo leaves every day.</li>
 				</ul>
+				<button onclick="redPanda()">Click me for A Surprise</button>
 			</div>
 		</div>
 	</body>
